--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-resume",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://p1st-0n.github.io/react-hw-02-phonebook-02/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
